// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> should render a paragraph when paragraph is true 1`] = `
<ForwardRef
  paragraph={true}
>
  <p>
    My content for paragraph
  </p>
</ForwardRef>
`;

exports[`<Typography /> should render with: blockquote 1`] = `
<ForwardRef
  type="blockquote"
>
  <blockquote>
    My content for
    blockquote
  </blockquote>
</ForwardRef>
`;

exports[`<Typography /> should render with: bold 1`] = `
<ForwardRef
  type="bold"
>
  <strong>
    My content for
    bold
  </strong>
</ForwardRef>
`;

exports[`<Typography /> should render with: heading1 1`] = `
<ForwardRef
  type="heading1"
>
  <h1>
    My content for
    heading1
  </h1>
</ForwardRef>
`;

exports[`<Typography /> should render with: heading2 1`] = `
<ForwardRef
  type="heading2"
>
  <h2>
    My content for
    heading2
  </h2>
</ForwardRef>
`;

exports[`<Typography /> should render with: heading3 1`] = `
<ForwardRef
  type="heading3"
>
  <h3>
    My content for
    heading3
  </h3>
</ForwardRef>
`;

exports[`<Typography /> should render with: paragraph 1`] = `
<ForwardRef
  type="paragraph"
>
  <p>
    My content for
    paragraph
  </p>
</ForwardRef>
`;

exports[`<Typography /> with no type 1`] = `
<ForwardRef>
  <p>
    My content for paragraph
  </p>
</ForwardRef>
`;
